--- a/app/globals.css
+++ b/app/globals.css
@@ -205,3 +205,12 @@ a {
 .content-block-rtf > ul {
   margin: 16px 0;
 }
+
+.directions-box ol li {
+  @apply p2;
+  list-style-type: decimal;
+  margin-left: 20px;
+}
+.directions-box ol {
+  margin: 0 0 12px 0;
+}
